objects/Genesys_Care_Forecasting_Rollup__c.object
<CustomObject>
    <fields>
        <fullName>APAC_Billing_Schedule_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Billing Schedule EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Billing_Schedule_FYM_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Billing Schedule FYM EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Billing_Schedule_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Billing Schedule FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Billing_Schedule_Renew_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Billing Schedule Renew EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Billing_Schedule_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Billing Schedule Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Billing_Schedule__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Billing Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Deferred_Revenue_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Deferred Revenue EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Deferred_Revenue_FYM_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Deferred Revenue FYM EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Deferred_Revenue_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Deferred Revenue FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Deferred_Revenue_Renew_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Deferred Revenue Renew EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Deferred_Revenue_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Deferred Revenue Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Deferred_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Deferred Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_First_Year_Maint_E_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC First Year Maint Ex EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_First_Year_Maint_E__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC First Year Maint Ex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_First_Year_Maint_U_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC First Year Maint Up EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_First_Year_Maint_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC First Year Maint Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_First_Year_Maintenance_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC First Year Maintenance EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_First_Year_Maintenance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC First Year Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Incremental_Revenue_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Incremental Revenue EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Incremental_Revenue_E_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Incremental Revenue Ex EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Incremental_Revenue_E__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Incremental Revenue Ex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Incremental_Revenue_U_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Incremental Revenue Up EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Incremental_Revenue_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Incremental Revenue Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Incremental_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Incremental Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Revenue_Recognition_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Revenue Recognition EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Revenue_Recognition_FYM_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Revenue Recognition FYM EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Revenue_Recognition_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Revenue Recognition FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Revenue_Recognition_Renew_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Revenue Recognition Renew EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Revenue_Recognition_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Revenue Recognition Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APAC_Revenue_Recognition__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APAC Revenue Recognition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Billing_Schedule_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Billing Schedule EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Billing_Schedule_FYM_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Billing Schedule FYM EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Billing_Schedule_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Billing Schedule FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Billing_Schedule_Renew_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Billing Schedule Renew EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Billing_Schedule_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Billing Schedule Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Billing_Schedule__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Billing Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Deferred_Revenue_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Deferred Revenue EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Deferred_Revenue_FYM_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Deferred Revenue FYM EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Deferred_Revenue_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Deferred Revenue FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Deferred_Revenue_Renew_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Deferred Revenue Renew EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Deferred_Revenue_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Deferred Revenue Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Deferred_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Deferred Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_First_Year_Maint_E_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA First Year Maint Ex EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_First_Year_Maint_E__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA First Year Maint Ex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_First_Year_Maint_U_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA First Year Maint Up EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_First_Year_Maint_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA First Year Maint Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_First_Year_Maintenance_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA First Year Maintenance EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_First_Year_Maintenance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA First Year Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Incremental_Revenue_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Incremental Revenue EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Incremental_Revenue_E_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Incremental Revenue Ex EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Incremental_Revenue_E__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Incremental Revenue Ex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Incremental_Revenue_U_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Incremental Revenue Up EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Incremental_Revenue_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Incremental Revenue Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Incremental_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Incremental Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Revenue_Recognition_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Revenue Recognition EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Revenue_Recognition_FYM_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Revenue Recognition FYM EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Revenue_Recognition_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Revenue Recognition FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Revenue_Recognition_Renew_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Revenue Recognition Renew EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Revenue_Recognition_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Revenue Recognition Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMEA_Revenue_Recognition__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EMEA Revenue Recognition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Billing_Schedule_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Billing Schedule EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Billing_Schedule_FYM_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Billing Schedule FYM EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Billing_Schedule_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Billing Schedule FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Billing_Schedule_Renew_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Billing Schedule Renew EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Billing_Schedule_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Billing Schedule Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Billing_Schedule__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Billing Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Deferred_Revenue_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Deferred Revenue EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Deferred_Revenue_FYM_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Deferred Revenue FYM EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Deferred_Revenue_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Deferred Revenue FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Deferred_Revenue_Renew_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Deferred Revenue Renew EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Deferred_Revenue_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Deferred Revenue Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Deferred_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Deferred Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_First_Year_Maint_E_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America First Year Maint Ex EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_First_Year_Maint_E__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America First Year Maint Ex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_First_Year_Maint_U_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America First Year Maint Up EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_First_Year_Maint_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America First Year Maint Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_First_Year_Maintenance_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America First Year Maintenance EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_First_Year_Maintenance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America First Year Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Incremental_Revenue_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Incremental Revenue EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Incremental_Revenue_E_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Incremental Revenue Ex EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Incremental_Revenue_E__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Incremental Revenue Ex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Incremental_Revenue_U_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Incremental Revenue Up EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Incremental_Revenue_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Incremental Revenue Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Incremental_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Incremental Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Revenue_Recognition_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Revenue Recognition EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Revenue_Recognition_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Revenue Recognition FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Revenue_Recognition_F_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Revenue Recognition F EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Revenue_Recognition_R_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Revenue Recognition R EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Revenue_Recognition_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Revenue Recognition Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latin_America_Revenue_Recognition__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latin America Revenue Recognition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Text__c</fullName>
        <label>Month Text</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Billing_Schedule_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Billing Schedule EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Billing_Schedule_FYM_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Billing Schedule FYM EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Billing_Schedule_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Billing Schedule FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Billing_Schedule_Renew_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Billing Schedule Renew EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Billing_Schedule_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Billing Schedule Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Billing_Schedule__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Billing Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Deferred_Revenue_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Deferred Revenue EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Deferred_Revenue_FYM_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Deferred Revenue FYM EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Deferred_Revenue_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Deferred Revenue FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Deferred_Revenue_Renew_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Deferred Revenue Renew EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Deferred_Revenue_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Deferred Revenue Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Deferred_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Deferred Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_First_Year_Maint_E_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America First Year Maint Ex EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_First_Year_Maint_E__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America First Year Maint Ex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_First_Year_Maint_U_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America First Year Maint Up EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_First_Year_Maint_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America First Year Maint Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_First_Year_Maintenance_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America First Year Maintenance EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_First_Year_Maintenance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America First Year Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Incremental_Revenue_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Incremental Revenue EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Incremental_Revenue_E_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Incremental Revenue Ex EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Incremental_Revenue_E__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Incremental Revenue Ex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Incremental_Revenue_U_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Incremental Revenue Up EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Incremental_Revenue_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Incremental Revenue Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Incremental_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Incremental Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Revenue_Recognition_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Revenue Recognition EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Revenue_Recognition_FYM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Revenue Recognition FYM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Revenue_Recognition_F_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Revenue Recognition F EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Revenue_Recognition_R_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Revenue Recognition R EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Revenue_Recognition_Renew__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Revenue Recognition Renew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>North_America_Revenue_Recognition__c</fullName>
        <defaultValue>0</defaultValue>
        <label>North America Revenue Recognition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_Text__c</fullName>
        <label>Quarter Text</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billing_Schedule_EUR__c</fullName>
        <formula>APAC_Billing_Schedule_EUR__c + EMEA_Billing_Schedule_EUR__c + Latin_America_Billing_Schedule_EUR__c + North_America_Billing_Schedule_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billing Schedule EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billing_Schedule__c</fullName>
        <formula>APAC_Billing_Schedule__c + EMEA_Billing_Schedule__c + Latin_America_Billing_Schedule__c + North_America_Billing_Schedule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billing Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Deferred_Revenue_EUR__c</fullName>
        <formula>APAC_Deferred_Revenue_EUR__c +  EMEA_Deferred_Revenue_EUR__c +  Latin_America_Deferred_Revenue_EUR__c +  North_America_Deferred_Revenue_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deferred Revenue EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Deferred_Revenue__c</fullName>
        <formula>APAC_Deferred_Revenue__c + EMEA_Deferred_Revenue__c + Latin_America_Deferred_Revenue__c + North_America_Deferred_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deferred Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>